# sudoku

./: .depend  .gitignore  Div.v  Extract.v  ListAux.v  ListOp.v  Make  Makefile  Makefile.coq.local  OrderedList.v  Parse.v  Permutation.v  Print.v  README  README.md  Sudoku.html  Sudoku.js  Sudoku.v  SudokuBoard.js  Tactic.v  Test.v  UList.v  _CoqProject  coq-sudoku-js.opam  coq-sudoku.opam  description  dune-project  index.html  meta.yml
.github/workflows/: build-js.yml  docker-action.yml  nix-action.yml
Html/: Sudoku.css  Sudoku.html  Sudoku.js
src/: Extract.v  dune  jSudoku.ml  jSudoku.mli
theories/: Div.v  ListAux.v  ListOp.v  OrderedList.v  Permutation.v  Sudoku.v  UList.v  dune
