opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/sudoku"
dev-repo: "git+https://github.com/coq-community/sudoku.git"
bug-reports: "https://github.com/coq-community/sudoku/issues"
license: "LGPL-2.1-or-later"

synopsis: "JavaScript Sudoku solver certified in Coq"
description: """
JavaScript Sudoku solver extracted from a formalisation
in Coq using js_of_ocaml."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.11"}
  "dune" {>= "2.5"}
  "coq" {(>= "8.12" & < "8.15~") | (= "dev")}
  "js_of_ocaml" {>= "3.9.0"}
  "js_of_ocaml-ppx"
  "coq-sudoku" {= version}
]

authors: [
  "Laurent Théry"
]
